Fix some modals being incorrectly styled in dark mode

--- a/shared/darkmode.css
+++ b/shared/darkmode.css
@@ -17,9 +17,9 @@ limitations under the License.
 body,
 .ui.segment,
 .ui.table,
-.ui.modal,
-.ui.modal .header,
-.ui.modal .content,
+.ui.normal.modal,
+.ui.normal.modal .header,
+.ui.normal.modal .content,
 .pusher {
     background-color: #111 !important;
 }
@@ -33,13 +33,13 @@ body,
 }
 
 .ui.segment,
-.ui.modal .header {
+.ui.normal.modal .header {
     border-color: #2a2a2a !important;
 }
 
 .ui.table th,
 .ui.table thead,
-.ui.modal .actions,
+.ui.normal.modal .actions,
 .ui.message,
 .ui.message .header,
 .ui.steps .active.step,
@@ -58,7 +58,7 @@ body,
 label,
 .ui.table th,
 .ui.table thead,
-.ui.modal .header,
+.ui.normal.modal .header,
 .ui.steps .step,
 .ui.steps .step .icon,
 .ui.steps .step .title,
